# cortex

./: .gitignore  Build.hpp.in  CMakeLists.txt  Configuration.cpp  Configuration.hpp  Demo.hpp  Framebuffer.hpp  FramebufferTable.hpp  LoadingBar.cpp  LoadingBar.gen.cpp  LoadingBar.hpp  NamedObject.hpp  OpenGL.cpp  OpenGL.hpp  Pass.hpp  Program.cpp  Program.hpp  README.md  Scene.hpp  Shader.cpp  Shader.hpp  SymbolTable.cpp  SymbolTable.hpp  Team210.nfo  Texture.cpp  Texture.hpp  TextureTable.hpp  Window.cpp  Window.hpp  config.gen.cmake  main.cpp
config/: demo.json
generator/: generator.py
shaders/gfx/: load.frag
shaders/symbols/: smoothmin.frag
symbols/: load.frag
